homepage image updated

--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -2,8 +2,8 @@
   <div class="relative">
     <div class="lg:absolute lg:inset-0 lg:left-1/2">
       <img
-        class="object-cover w-full h-64 sm:h-80 lg:absolute object-left lg:h-full"
-        src="https://www.colorsandfonts.com/images/bundle.png"
+        class=" w-full h-64 sm:h-80 lg:absolute object-left lg:h-full"
+        src="/images/projects/Call Support image with bg.jpg"
         alt=""
       />
     </div>
