nnew blogs adddded

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -149,7 +149,20 @@
     image: "/images/Blogs/blog 14.png",
     link: "/How-Much-Does-an-AI-Virtual-Receptionist-Cost?",
   },
-  
+  {
+    id: 15,
+    title: "Leveraging AI Answering Services to Enhance Customer Support and Service Delivery",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog15.jpg",
+    link: "/Leveraging-AI-Answering-Services-to-Enhance-Customer-Support-and-Service-Delivery",
+  },
+  {
+    id: 16,
+    title: "AI Voice Agent – A Complete Guide",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog16.jpg",
+    link: "/AI-Voice-Agent – A-Complete-Guide",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
