new blogs added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -129,10 +129,10 @@
   },
   {
     id: 12,
-    title: "What Is he Hardest Question to Ask AI?",
+    title: "What Is the Hardest Question to Ask AI?",
     description: "Explore how AI tools can boost your sales strategy.",
     image: "/images/Blogs/blog12.png",
-    link: "/What-Is-he-Hardest-Question-to-Ask-AI",
+    link: "/What-Is-the-Hardest-Question-to-Ask-AI",
   },
   
   {
