--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -161,18 +161,18 @@
     title: "AI Voice Agent – A Complete Guide",
     description: "Explore how AI tools can boost your sales strategy.",
     image: "/images/Blogs/blog16.jpg",
-    link: "/AI-Voice-Agent – A-Complete-Guide",
+    link: "/AI-Voice-Agent-A-Complete-Guide",
   },
   {
     id: 17,
-    title: "AI Answering Services for E-commerce: Providing 24/7 Customer Support",
+    title: "AI Answering Services for E-commerce:Providing 24/7 Customer Support",
     description: "Explore how AI tools can boost your sales strategy.",
     image: "/images/Blogs/blog17.jpg",
     link: "/AI-Answering-Services-for-E-commerce-Providing-24",
   },
   {
     id: 18,
-    title: "AI Answering Services for E-commerce: Providing 24/7 Customer Support",
+    title: "Voice AI and Storytelling:Creating Immersive Experiences",
     description: "Explore how AI tools can boost your sales strategy.",
     image: "/images/Blogs/blog18.jpg",
     link: "/Voice-AI-and-Storytelling-Creating-Immersive-Experiences",
