new blogs  added

--- a/src/components/global/Cta.astro
+++ b/src/components/global/Cta.astro
@@ -3,7 +3,7 @@
     <div class="lg:absolute lg:inset-0 lg:left-1/2">
       <img
         class=" w-full h-64 sm:h-80 lg:absolute object-left lg:h-full"
-        src="/images/projects/Call Support image with bg.jpg"
+        src="/images/compressed/use caseses-min.jpg"
         alt=""
       />
     </div>
