--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -177,6 +177,20 @@
     image: "/images/Blogs/blog18.jpg",
     link: "/Voice-AI-and-Storytelling-Creating-Immersive-Experiences",
   },
+  {
+    id: 19,
+    title: "How to Build an AI Voice Agent Call Center",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog19.jpg",
+    link: "/How-to-Build-an-AI-Voice-Agent-Call-Center",
+  },
+  {
+    id: 20,
+    title: "Top Tips and Tricks for Building Your First AI Voice Agent",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog20.jpg",
+    link: "/Top-Tips-and-Tricks-for-Building-Your-First-AI-Voice-Agent",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
