--- a/src/components/infopages/products/Concierge.astro
+++ b/src/components/infopages/products/Concierge.astro
@@ -15,7 +15,7 @@ import Discover from './components/discover.astro'
     <!-- Background Image -->
     <div
       class="absolute inset-0 bg-cover bg-center rounded-lg"
-      style="background-image: url('/images/projects/AI Concierge Service.png');"
+      style="background-image: url('/images/compressed/AI Concierge Service-min.png');"
     >
     </div>
     <!-- Light Color Overlay -->
@@ -172,7 +172,7 @@ import Discover from './components/discover.astro'
   <!--  Slider -->
   <section class="rounded-lg">
     <img 
-      src="/images/projects/Integration.png" 
+      src="/images/compressed/Integration image-min.png" 
       class="rounded-[20px] object-cover" 
       alt="Integration" 
     />
