--- a/src/components/infopages/products/Service.astro
+++ b/src/components/infopages/products/Service.astro
@@ -15,7 +15,7 @@ import Discover from "./components/discover.astro";
     <!-- Background Image -->
     <div
       class="absolute inset-0 bg-cover bg-center rounded-lg"
-      style="background-image: url('/images/projects/AI Answering Service.png');"
+      style="background-image: url('/images/compressed/AI Answering Service-min.png');"
     >
     </div>
     <!-- Light Color Overlay -->
@@ -168,7 +168,7 @@ import Discover from "./components/discover.astro";
 
   <!--  Slider -->
   <section class="my-12 py-12 px-6 ">
-    <img src="/images/projects/Integration.png" alt="Integration" />
+    <img src="/images/compressed/Integration image-min.png" alt="Integration" />
     <!-- <div class="text-left gap-10 mb-8 flex justify-between">
       <h2 class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display">
         Connect CallSupport to Your Existing System
