--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -73,17 +73,20 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
           <!-- </div> -->
           <!-- </div> -->
           <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
-            <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/Figma.svg" />
+            <div class="flex justify-center col-span-1 h-[4vh]">
+              <img alt="logo" src="/images/logos/openai.webp" />
             </div>
             <div class="flex justify-center col-span-1">
               <img alt="logo" class="h-8" src="/images/logos/Twilio.png" />
-            </div>
-            <div class="flex justify-center col-span-1">
+            </div>  
+            <!-- <div class="flex justify-center col-span-1">
               <img alt="logo" class="h-8" src="/Stripe.svg" />
+            </div> -->
+            <div class="flex justify-center col-span-1 h-[4vh]">
+              <img alt="logo" src="/images/logos/shopify.png" />
             </div>
             <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/Gitlab.svg" />
+              <img alt="logo" class="h-8" src="/images/logos/Cal.com.png" />
             </div>
             <div class="flex justify-center col-span-1">
               <img alt="logo" class="h-8" src="/images/logos/magical.svg" />
