--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -41,7 +41,7 @@ import Annual from "./components/annual.astro";
   <!-- Enterprise Pricing Section  -->
   <div class="mx-auto pt-12 gap-y-10 ">
     <section
-    class="flex py-4 flex-col lg:flex-row items-start justify-between px-6 lg:py-8 lg:px-12 bg-[url('/images/projects/EnterPrise.png')]  bg-center bg-no-repeat rounded-3xl relative text-white shadow-none lg:gap-4"
+    class="flex py-4 flex-col lg:flex-row items-start justify-between px-6 lg:py-8 lg:px-12 bg-[url('/images/compressed/EnterPrise-min.png')]  bg-center bg-no-repeat rounded-3xl relative text-white shadow-none lg:gap-4"
   >
       <!-- Dedicated Badge -->
       <!-- <div
@@ -177,12 +177,12 @@ import Annual from "./components/annual.astro";
       <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
         <div class="flex justify-center col-span-1 px-8">
           <img alt="logo" src="/Figma.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" src="/Canva.svg" />
+        </div><div class="flex justify-center col-span-1 h-[6vh] px-8">
+          <img alt="logo" src="/images/logos/shopify.png" />
         </div><div class="flex justify-center col-span-1 px-8">
           <img alt="logo" src="/Stripe.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" src="/Gitlab.svg" />
+        </div><div class="flex justify-center col-span-1 px-8 h-[6vh]">
+          <img alt="logo" src="/images/logos/Cal.com.png" />
         </div><div class="flex justify-center col-span-1 px-8">
           <img alt="logo"  src="/images/logos/magical.svg" />
         </div><div class="flex justify-center col-span-1 px-8">
