--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -20,7 +20,7 @@
           <img
             alt="Lexingtøn thumbnail"
             class="border border-gray-200 lg:rounded-3xl object-cover rounded shadow-2xl"
-            src="images/projects/Use casess Image without bg.jpg"  
+            src="images/compressed/Use casess Image with bg-min.png"  
           />
         </div>
       </div>
