--- a/src/components/infopages/products/Receptionist.astro
+++ b/src/components/infopages/products/Receptionist.astro
@@ -15,7 +15,7 @@ import Discover from './components/discover.astro'
     <!-- Background Image -->
     <div
       class="absolute inset-0 bg-cover bg-top rounded-lg"
-      style="background-image: url('/images/projects/AlReceptionist.png');"
+      style="background-image: url('/images/compressed/Al Receptionist-min.png');"
     >
     </div>
     <!-- Light Color Overlay -->
@@ -150,7 +150,7 @@ import Discover from './components/discover.astro'
 
   <!--  Slider -->
   <section class="my-12 py-12 px-6 ">
-    <img src="/images/projects/Integration.png" alt="Integration" />
+    <img src="/images/compressed/Integration image-min.png" alt="Integration" />
     <!-- <div class="text-left gap-10 mb-8 flex justify-between">
       <h2 class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display">
         Connect CallSupport to Your Existing System
