new blogs added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -191,6 +191,20 @@
     image: "/images/Blogs/blog20.jpg",
     link: "/Top-Tips-and-Tricks-for-Building-Your-First-AI-Voice-Agent",
   },
+  {
+    id: 21,
+    title: "AI Answering Services for E-commerce: Providing 24/7 Customer Support",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog21.jpg",
+    link: "/AI-Answering-Services-for-E-commerce-Providing-24-7-Customer-Support",
+  },
+  {
+    id: 22,
+    title: "AI Voice Chatbot for Product Demos and Trials",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog22.jpg",
+    link: "/AI-Voice-Chatbot-for-Product-Demos-and-Trials",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
