--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -113,7 +113,7 @@
           href="/#features">Features</a> -->
         <a
           class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400 lg:ml-auto"
-          href="https://call-support.affonso.io/"
+          href="https://call-support.affonso.io/callsupport"
           target="_blank">Affiliate</a
         >
         <a
