--- a/src/components/Forms/CallForm.astro
+++ b/src/components/Forms/CallForm.astro
@@ -37,7 +37,7 @@
               type="email"
                name="email"
               class="w-full px-4 py-3 bg-white text-black rounded-lg focus:outline-none focus:ring-2 focus:ring-white placeholder-gray-500"
-              placeholder="julia@CallSupport.com"
+              placeholder="julia@callsupport.ai"
               required
             />
           </div>
