--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -205,6 +205,27 @@
     image: "/images/Blogs/blog22.jpg",
     link: "/AI-Voice-Chatbot-for-Product-Demos-and-Trials",
   },
+  {
+    id: 23,
+    title: "AI Outbound Calls for Appointment Scheduling",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog23.jpg",
+    link: "/AI-Outbound-Calls-for-Appointment-Scheduling",
+  },
+  {
+    id: 24,
+    title: "AI Outbound Calls and the Future of Work",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog24.jpg",
+    link: "/AI-Outbound-Calls-and-the-Future-of-Work",
+  },
+  {
+    id: 25,
+    title: "Measuring the Effectiveness of Virtual Assistant AI Answering Service",
+    description: "Explore how AI tools can boost your sales strategy.",
+    image: "/images/Blogs/blog25.jpg",
+    link: "/Measuring-the-Effectiveness-of-Virtual-Assistant-AI-Answering-Service",
+  },
 ];
 
  const reversedBlogs = [...blogs].reverse();
