--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -72,29 +72,32 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
 
           <!-- </div> -->
           <!-- </div> -->
-          <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
-            <div class="flex justify-center col-span-1 h-[4vh]">
-              <img alt="logo" src="/images/logos/openai.webp" />
-            </div>
-            <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/images/logos/Twilio.png" />
-            </div>  
-            <!-- <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/Stripe.svg" />
-            </div> -->
-            <div class="flex justify-center col-span-1 h-[4vh]">
-              <img alt="logo" src="/images/logos/shopify.png" />
-            </div>
-            <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/images/logos/Cal.com.png" />
-            </div>
-            <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/images/logos/magical.svg" />
-            </div>
-            <div class="flex justify-center col-span-1">
-              <img alt="logo" class="h-8" src="/images/logos/AWRENCE2.svg" />
-            </div>
+       
+          
+            <!-- Grid Section -->
+            <div class="grid grid-cols-2 gap-2 lg:mt-8 md:grid-cols-6 mt-6">
+            
+              <div class="flex justify-center col-span-1 h-[4vh]">
+                <img alt="logo" src="/images/logos/openai.webp" />
+              </div>
+              <div class="flex justify-center col-span-1">
+                <img alt="logo" class="h-8" src="/images/logos/Twilio-logo-red.webp" />
+              </div>
+              <div class="flex justify-center col-span-1 h-[4vh]">
+                <img alt="logo" src="/images/logos/Shopify_logo_2018.webp" />
+              </div>
+              <div class="flex justify-center col-span-1">
+                <img alt="logo" class="h-8" src="/images/logos/logo.svg" />
+              </div>
+              <div class="flex justify-center col-span-1">
+                <img alt="logo" class="h-12" src="/images/logos/magical.svg" />
+              </div>
+              <div class="flex justify-center col-span-1">
+                <img alt="logo" class="h-12" src="/images/logos/AWRENCE2.svg" />
+              </div>
+             
           </div>
+          
         </div>
       </div>
     </dl>
