Landig page issue fixed

--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -72,7 +72,13 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
 
           <!-- </div> -->
           <!-- </div> -->
-       
+          <div class=" items-center justify-center gap-1 max-w-xxl space-x-4">
+            <div class="text-center mb-2">
+              <p class=" tracking-tight font-semibold text-black  font-display ">
+                Trusted by over 1000 companies of all sizes
+              </p>
+            </div>
+            <!-- Left Text Section -->
           
             <!-- Grid Section -->
             <div class="grid grid-cols-2 gap-2 lg:mt-8 md:grid-cols-6 mt-6">
@@ -95,7 +101,7 @@ import VoiceAIButton from "../infopages/VoiceAIButton.astro";
               <div class="flex justify-center col-span-1">
                 <img alt="logo" class="h-12" src="/images/logos/AWRENCE2.svg" />
               </div>
-             
+            </div>
           </div>
           
         </div>
