--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -1,4 +1,4 @@
-<section class="bg-white border-b border-black/5">
+<section class="bg-white border-b border-black/5 sticky  top-0 z-50">
   <div class="w-full mx-auto md:px-12 px-8 max-w-7xl lg:px-16">
     <div class="relative flex flex-col w-full py-5 mx-auto bg-white md:items-center md:justify-between md:flex-row md:px-6">
       <!-- Logo Section -->
