--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -174,19 +174,25 @@ import Annual from "./components/annual.astro";
   
 
     <div class="mx-auto pt-12 lg:py-16">
-      <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
-        <div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" src="/Figma.svg" />
-        </div><div class="flex justify-center col-span-1 h-[6vh] px-8">
-          <img alt="logo" src="/images/logos/shopify.png" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo" src="/Stripe.svg" />
-        </div><div class="flex justify-center col-span-1 px-8 h-[6vh]">
-          <img alt="logo" src="/images/logos/Cal.com.png" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo"  src="/images/logos/magical.svg" />
-        </div><div class="flex justify-center col-span-1 px-8">
-          <img alt="logo"  src="/images/logos/AWRENCE2.svg" />
+      <div class="grid grid-cols-2 gap-2 lg:mt-8 md:grid-cols-6 mt-6">
+            
+        <div class="flex justify-center col-span-1 h-[4vh]">
+          <img alt="logo" src="/images/logos/openai.webp" />
+        </div>
+        <div class="flex justify-center col-span-1">
+          <img alt="logo" class="h-8" src="/images/logos/Twilio-logo-red.webp" />
+        </div>
+        <div class="flex justify-center col-span-1 h-[4vh]">
+          <img alt="logo" src="/images/logos/Shopify_logo_2018.webp" />
+        </div>
+        <div class="flex justify-center col-span-1">
+          <img alt="logo" class="h-8" src="/images/logos/logo.svg" />
+        </div>
+        <div class="flex justify-center col-span-1">
+          <img alt="logo" class="h-12" src="/images/logos/magical.svg" />
+        </div>
+        <div class="flex justify-center col-span-1">
+          <img alt="logo" class="h-12" src="/images/logos/AWRENCE2.svg" />
         </div>
       </div>
     </div>
