--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -7,10 +7,10 @@
         <div>
           <p
             class="text-4xl tracking-tight font-medium text-black md:text-5xl font-display">
-            100s of Usecases
+            Used by 100+ teams
           </p>
           <p class="text-base mt-4 text-gray-500">
-            100s of usecases from Ecommerce, Clinics, Dentists, Healthcare, Real State, Solar, Car Dealership, Restaurant
+            Used by 100+ teams who create Voice Agents at scale. 100s of usecases from Ecommerce, Clinics, Dentists, Healthcare, Real State, Solar, Car Dealership, Restaurant
           </p>
         </div>
       </div>
