--- a/src/components/landing/components/monthly.astro
+++ b/src/components/landing/components/monthly.astro
@@ -274,7 +274,7 @@ class="grid max-w-2xl grid-cols-1 py-4 mt- -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-
   <a
   class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
   aria-label="Big fish tier"
-  href="https://zcal.co/i/cL7eACvt"
+  href="https://app.callsupport.ai"
   target="_blank" 
   rel="noopener noreferrer"
 >
