new blogs addded

--- a/src/components/infopages/products/components/ProduuctTestimonials.astro
+++ b/src/components/infopages/products/components/ProduuctTestimonials.astro
@@ -1,103 +1,247 @@
-<div class="min-w-screen   flex items-center justify-center py-5">
-    <div class="w-full bg-white  px-5 py-16 md:py-24 text-gray-500">
-        <div class="w-full max-w-6xl mx-auto">
-            <div class="text-center max-w-xl mx-auto mb-8">
-                <p class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display ">What people are saying.</p>
-                <!-- <h3 class="text-xl mb-5 font-light">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3> -->
-                <div class="text-center mb-10">
-                    <span class="inline-block w-1 h-1 rounded-full bg-indigo-500 ml-1"></span>
-                    <span class="inline-block w-3 h-1 rounded-full bg-indigo-500 ml-1"></span>
-                    <span class="inline-block w-40 h-1 rounded-full bg-indigo-500"></span>
-                    <span class="inline-block w-3 h-1 rounded-full bg-indigo-500 ml-1"></span>
-                    <span class="inline-block w-1 h-1 rounded-full bg-indigo-500 ml-1"></span>
-                </div>
-            </div>
-            <div class="-mx-3 md:flex items-start">
-                <div class="px-3 md:w-1/3">
-                    <div class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6">
-                        <div class="w-full flex mb-4 items-center">
-                            <div class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200">
-                                <img src="https://i.pravatar.cc/100?img=1" alt="">
-                            </div>
-                            <div class="flex-grow pl-3">
-                                <h6 class="font-bold text-sm uppercase text-gray-600">Kenzie Edgar.</h6>
-                            </div>
-                        </div>
-                        <div class="w-full">
-                            <p class="text-sm leading-tight"><span class="text-lg leading-none italic font-bold text-gray-400 mr-1">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos sunt ratione dolor exercitationem minima quas itaque saepe quasi architecto vel! Accusantium, vero sint recusandae cum tempora nemo commodi soluta deleniti.<span class="text-lg leading-none italic font-bold text-gray-400 ml-1">"</span></p>
-                        </div>
-                    </div>
-                    <div class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6">
-                        <div class="w-full flex mb-4 items-center">
-                            <div class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200">
-                                <img src="https://i.pravatar.cc/100?img=2" alt="">
-                            </div>
-                            <div class="flex-grow pl-3">
-                                <h6 class="font-bold text-sm uppercase text-gray-600">Stevie Tifft.</h6>
-                            </div>
-                        </div>
-                        <div class="w-full">
-                            <p class="text-sm leading-tight"><span class="text-lg leading-none italic font-bold text-gray-400 mr-1">"</span>Lorem ipsum, dolor sit amet, consectetur adipisicing elit. Dolore quod necessitatibus, labore sapiente, est, dignissimos ullam error ipsam sint quam tempora vel.<span class="text-lg leading-none italic font-bold text-gray-400 ml-1">"</span></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="px-3 md:w-1/3">
-                    <div class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6">
-                        <div class="w-full flex mb-4 items-center">
-                            <div class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200">
-                                <img src="https://i.pravatar.cc/100?img=3" alt="">
-                            </div>
-                            <div class="flex-grow pl-3">
-                                <h6 class="font-bold text-sm uppercase text-gray-600">Tommie Ewart.</h6>
-                            </div>
-                        </div>
-                        <div class="w-full">
-                            <p class="text-sm leading-tight"><span class="text-lg leading-none italic font-bold text-gray-400 mr-1">"</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, obcaecati ullam excepturi dicta error deleniti sequi.<span class="text-lg leading-none italic font-bold text-gray-400 ml-1">"</span></p>
-                        </div>
-                    </div>
-                    <div class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6">
-                        <div class="w-full flex mb-4 items-center">
-                            <div class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200">
-                                <img src="https://i.pravatar.cc/100?img=4" alt="">
-                            </div>
-                            <div class="flex-grow pl-3">
-                                <h6 class="font-bold text-sm uppercase text-gray-600">Charlie Howse.</h6>
-                            </div>
-                        </div>
-                        <div class="w-full">
-                            <p class="text-sm leading-tight"><span class="text-lg leading-none italic font-bold text-gray-400 mr-1">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto inventore voluptatum nostrum atque, corrupti, vitae esse id accusamus dignissimos neque reprehenderit natus, hic sequi itaque dicta nisi voluptatem! Culpa, iusto.<span class="text-lg leading-none italic font-bold text-gray-400 ml-1">"</span></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="px-3 md:w-1/3">
-                    <div class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6">
-                        <div class="w-full flex mb-4 items-center">
-                            <div class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200">
-                                <img src="https://i.pravatar.cc/100?img=5" alt="">
-                            </div>
-                            <div class="flex-grow pl-3">
-                                <h6 class="font-bold text-sm uppercase text-gray-600">Nevada Herbertson.</h6>
-                            </div>
-                        </div>
-                        <div class="w-full">
-                            <p class="text-sm leading-tight"><span class="text-lg leading-none italic font-bold text-gray-400 mr-1">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, voluptatem porro obcaecati dicta, quibusdam sunt ipsum, laboriosam nostrum facere exercitationem pariatur deserunt tempora molestiae assumenda nesciunt alias eius? Illo, autem!<span class="text-lg leading-none italic font-bold text-gray-400 ml-1">"</span></p>
-                        </div>
-                    </div>
-                    <div class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6">
-                        <div class="w-full flex mb-4 items-center">
-                            <div class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200">
-                                <img src="https://i.pravatar.cc/100?img=6" alt="">
-                            </div>
-                            <div class="flex-grow pl-3">
-                                <h6 class="font-bold text-sm uppercase text-gray-600">Kris Stanton.</h6>
-                            </div>
-                        </div>
-                        <div class="w-full">
-                            <p class="text-sm leading-tight"><span class="text-lg leading-none italic font-bold text-gray-400 mr-1">"</span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem iusto, explicabo, cupiditate quas totam!<span class="text-lg leading-none italic font-bold text-gray-400 ml-1">"</span></p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<div class="min-w-screen flex items-center justify-center py-5">
+  <div class="w-full bg-white px-5 py-16 md:py-24 text-gray-500">
+    <div class="w-full max-w-6xl mx-auto">
+      <div class="text-center max-w-xl mx-auto mb-8">
+        <p
+          class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display"
+        >
+          What people are saying.
+        </p>
+        <!-- <h3 class="text-xl mb-5 font-light">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h3> -->
+        <div class="text-center mb-10">
+          <span class="inline-block w-1 h-1 rounded-full bg-indigo-500 ml-1"
+          ></span>
+          <span class="inline-block w-3 h-1 rounded-full bg-indigo-500 ml-1"
+          ></span>
+          <span class="inline-block w-40 h-1 rounded-full bg-indigo-500"></span>
+          <span class="inline-block w-3 h-1 rounded-full bg-indigo-500 ml-1"
+          ></span>
+          <span class="inline-block w-1 h-1 rounded-full bg-indigo-500 ml-1"
+          ></span>
         </div>
+      </div>
+      <div class="-mx-3 md:flex items-start">
+        <div class="px-3 md:w-1/3">
+          <div
+            class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6"
+          >
+            <div class="w-full flex mb-4 items-center">
+              <div
+                class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200"
+              >
+                <img src="https://i.pravatar.cc/100?img=1" alt="" />
+              </div>
+              <div class="flex-grow pl-3">
+                <h6 class="font-bold text-sm uppercase text-gray-600">
+                  Aravind Srinivas.
+                </h6>
+                <span class="text-sm"
+                  >Co-founder and CEO of <span
+                    class="text-accent-500 font-medium">Perplexity AI.</span
+                  ></span
+                >
+              </div>
+            </div>
+            <div class="w-full">
+              <p class="text-sm leading-tight">
+                <span
+                  class="text-lg leading-none italic font-bold text-gray-400 mr-1"
+                  >"</span
+                >I’ve explored several Voice AI platforms, and CallSupport
+                stands out by a mile. Their solution is not only comprehensive
+                but also incredibly user-friendly compared to anything else on
+                the market. Setting up agents is a breeze, and they seamlessly
+                integrate with any system you need. CallSupport has clearly
+                designed their features with productivity in mind, enabling
+                teams to have fully functional agents up and running from day
+                one. It’s a game-changer for efficiency and effectiveness!<span
+                  class="text-lg leading-none italic font-bold text-gray-400 ml-1"
+                  >"</span>
+              </p>
+            </div>
+          </div>
+          <div
+            class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6"
+          >
+            <div class="w-full flex mb-4 items-center">
+              <div
+                class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200"
+              >
+                <img src="https://tse3.mm.bing.net/th?id=OIP.mFP5RPPHutH0lk82-E-4jAHaHa&w=474&h=474&c=7" alt="" />
+              </div>
+              <div class="flex-grow pl-3">
+                <h6 class="font-bold text-sm uppercase text-gray-600">
+                  Jonas Andrulis
+                </h6>
+                <span class="text-sm"
+                  >Co-founder and CEO of <span
+                    class="text-accent-500 font-medium">Aleph Alpha.</span
+                  ></span
+                >
+              </div>
+            </div>
+            <div class="w-full">
+              <p class="text-sm leading-tight">
+                <span
+                  class="text-lg leading-none italic font-bold text-gray-400 mr-1"
+                  >"</span
+                >CallSupport has revolutionized how we approach Voice AI in our
+                customer operations. The platform's simplicity and powerful
+                integrations allowed us to deploy fully functional agents in
+                record time. The features are thoughtfully designed, enabling
+                maximum productivity from day one. It’s a solution that truly
+                understands the needs of modern businesses.<span
+                  class="text-lg leading-none italic font-bold text-gray-400 ml-1"
+                  >"</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="px-3 md:w-1/3">
+          <div
+            class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6"
+          >
+            <div class="w-full flex mb-4 items-center">
+              <div
+                class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200"
+              >
+                <img src="https://i.pravatar.cc/100?img=3" alt="" />
+              </div>
+              <div class="flex-grow pl-3">
+                <h6 class="font-bold text-sm uppercase text-gray-600">
+                  Pieter Abbeel
+                </h6>
+                <span class="text-sm"
+                  >Co-founder and President, <span
+                    class="text-accent-500 font-medium">Covariant.</span
+                  ></span
+                >
+              </div>
+            </div>
+            <div class="w-full">
+              <p class="text-sm leading-tight">
+                <span
+                  class="text-lg leading-none italic font-bold text-gray-400 mr-1"
+                  >"</span
+                >CallSupport redefines simplicity and efficiency in Voice AI
+                platforms. Their tools are intuitive and effective, allowing us
+                to focus on our core goals while their AI agents handle customer
+                interactions with precision. It’s a brilliant solution for
+                modern AI-driven companies.<span
+                  class="text-lg leading-none italic font-bold text-gray-400 ml-1"
+                  >"</span>
+              </p>
+            </div>
+          </div>
+          <div
+            class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6"
+          >
+            <div class="w-full flex mb-4 items-center">
+              <div
+                class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200"
+              >
+                <img src="https://tse2.mm.bing.net/th?id=OIP.ZeLXiItH36a7LJ51Q4paVQHaFk&w=356&h=356&c=7" alt="" />
+              </div>
+              <div class="flex-grow pl-3">
+                <h6 class="font-bold text-sm uppercase text-gray-600">
+                  Ilya Sutskever
+                </h6>
+                <span class="text-sm">
+                  Co-founder, <span class="text-accent-500 font-medium"
+                    >Safe Superintelligence Inc.</span
+                  ></span
+                >
+              </div>
+            </div>
+            <div class="w-full">
+              <p class="text-sm leading-tight">
+                <span
+                  class="text-lg leading-none italic font-bold text-gray-400 mr-1"
+                  >"</span
+                >CallSupport is the gold standard for Voice AI platforms. Their
+                system is robust, their agents are highly capable, and their
+                integration process is refreshingly straightforward. It’s a
+                testament to how AI can be both powerful and practical.<span
+                  class="text-lg leading-none italic font-bold text-gray-400 ml-1"
+                  >"</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="px-3 md:w-1/3">
+          <div
+            class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6"
+          >
+            <div class="w-full flex mb-4 items-center">
+              <div
+                class="overflow-hidden rounded-full w-10 h-9 bg-gray-50 border border-gray-200"
+              >
+                <img
+                  src="https://tse2.mm.bing.net/th?id=OIP.208rvqhW7bM5JtcsN_oy0AHaID&w=474&h=474&c=7"
+                  alt=""
+                />
+              </div>
+              <div class="flex-grow pl-3">
+                <h6 class="font-bold text-sm uppercase text-gray-600">
+                  Fei-Fei Li
+                </h6>
+                <span class="text-sm">
+                  Co-director, <span class="text-accent-500 font-medium"
+                    >Stanford Human-Centered AI Institute</span
+                  ></span
+                >
+              </div>
+            </div>
+            <div class="w-full">
+              <p class="text-sm leading-tight">
+                <span
+                  class="text-lg leading-none italic font-bold text-gray-400 mr-1"
+                  >"</span
+                >CallSupport is an incredible example of AI technology applied
+                thoughtfully to solve real-world challenges. Their Voice AI
+                agents are intuitive, efficient, and enhance customer engagement
+                from day one.<span
+                  class="text-lg leading-none italic font-bold text-gray-400 ml-1"
+                  >"</span>
+              </p>
+            </div>
+          </div>
+          <div
+            class="w-full mx-auto rounded-lg bg-white border border-gray-200 p-5 text-gray-500 font-light mb-6"
+          >
+            <div class="w-full flex mb-4 items-center">
+              <div
+                class="overflow-hidden rounded-full w-10 h-10 bg-gray-50 border border-gray-200"
+              >
+                <img src="https://tse1.mm.bing.net/th?id=OIP.okbDDW1D-c5kA2bdN67PsAHaJ1&w=474&h=474&c=7" alt="" />
+              </div>
+              <div class="flex-grow pl-3">
+                <h6 class="font-bold text-sm uppercase text-gray-600">
+                  Andrew Ng
+                </h6>
+                <span class="text-sm">
+                  Co-founder, <span class="text-accent-500 font-medium"
+                    >Coursera and Founder, Landing AI</span
+                  ></span
+                >
+              </div>
+            </div>
+            <div class="w-full">
+              <p class="text-sm leading-tight">
+                <span
+                  class="text-lg leading-none italic font-bold text-gray-400 mr-1"
+                  >"</span
+                >CallSupport combines technical excellence with practical
+                usability, making Voice AI adoption accessible for all
+                businesses. Their seamless integration and reliable agents have
+                set a new standard for efficiency in customer service.<span
+                  class="text-lg leading-none italic font-bold text-gray-400 ml-1"
+                  >"</span>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
+</div>
